--- a/Package.json
+++ b/Package.json
@@ -1,7 +1,7 @@
 {
   "name": "mock-promises",
   "version": "0.0.1",
-  "devDependencies": {
-    "mocha-server": "0.2"
+  "scripts": {
+    "preinstall": "npm install -g mocha-server"
   }
 }
