--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test"
   ],
   "devDependencies": {
+    "bluebird": "^2.9.34",
     "es6-promise": "^2.3.0",
     "gulp": "^3.9.0",
     "gulp-jasmine-browser": "^0.1.4",
